# console-messenger-cpp

./: .clang-format  .gitmodules  CMakeLists.txt  Doxyfile  README.md  socket_utils.h
client/: main_client.cpp
docs/html/: annotated.html  classes.html  dir_41e1742e44e2de38b3bc91f993fed282.html  dir_db3a54907829b36871118d03417739cd.html  files.html  functions.html  functions_vars.html  globals.html  globals_func.html  globals_vars.html  graph_legend.html  history_8cpp.html  history_8cpp__incl.map  history_8cpp__incl.md5  history_8cpp_source.html  history_8h.html  history_8h__dep__incl.map  history_8h__dep__incl.md5  history_8h__incl.map  history_8h__incl.md5  history_8h_source.html  index.html  main__client_8cpp.html  main__client_8cpp__incl.map  main__client_8cpp__incl.md5  main__client_8cpp_source.html  main__server_8cpp.html  main__server_8cpp__incl.map  main__server_8cpp__incl.md5  main__server_8cpp_source.html  menudata.js  socket__utils_8h.html  socket__utils_8h__dep__incl.map  socket__utils_8h__dep__incl.md5  socket__utils_8h__incl.map  socket__utils_8h__incl.md5  socket__utils_8h_source.html  structClientInfo-members.html  structClientInfo.html  structServerConf-members.html  (+11 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_4.js  all_7.js  all_a.js  all_c.js  all_d.js  classes_0.js  classes_1.js  files_1.js  files_2.js  files_3.js  functions_1.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_8.js  functions_9.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js
docs/latex/: annotated.tex  dir_41e1742e44e2de38b3bc91f993fed282.tex  dir_db3a54907829b36871118d03417739cd.tex  files.tex  history_8cpp.tex  history_8cpp__incl.md5  history_8cpp_source.tex  history_8h.tex  history_8h__dep__incl.md5  history_8h__incl.md5  history_8h_source.tex  main__client_8cpp.tex  main__client_8cpp__incl.md5  main__client_8cpp_source.tex  main__server_8cpp.tex  main__server_8cpp__incl.md5  main__server_8cpp_source.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.out  refman.tex  refman.toc  socket__utils_8h.tex  socket__utils_8h__dep__incl.md5  socket__utils_8h__incl.md5  socket__utils_8h_source.tex  structClientInfo.tex  structServerConf.tex  telegram__auth_8cpp.tex  telegram__auth_8cpp__incl.md5  telegram__auth_8cpp_source.tex  telegram__auth_8h.tex  telegram__auth_8h__dep__incl.md5  telegram__auth_8h__incl.md5  telegram__auth_8h_source.tex
server/: history.cpp  history.h  main_server.cpp  telegram_auth.cpp  telegram_auth.h
tests/: test_history.cpp  test_main_client.cpp  test_main_server.cpp  test_telegram_auth.cpp
